Updates to capture additional VPN work
Still missing updates for local VPN from phone...

--- a/templates/wg-client.conf.j2
+++ b/templates/wg-client.conf.j2
@@ -6,6 +6,9 @@ PrivateKey = {{ wireguard_client_private_key }}
 PostUp = iptables -A FORWARD -i %i -j ACCEPT; iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
 PostDown = iptables -D FORWARD -i %i -j ACCEPT; iptables -t nat -D POSTROUTING -o eth0 -j MASQUERADE
 {% endif %}
+{% if 'newyork' in group_names %}
+DNS = {{ wireguard_client_dns }}
+{% endif %}
 
 [Peer]
 PublicKey = {{ wireguard_server_public_key }}
